--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <link rel = "stylesheet" type="text/css" href="style.css" />
 <body>
 	<script src="http://d3js.org/d3.v3.min.js"></script>
-	<script type="text/javascript" src="bar.js"></script>
+	<script type="text/javascript" src="soundConsensus.js"></script>
 </body>
