--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
 <p><a href="http://bl.ocks.org/mattbrehmer/raw/9004f31b95a192af18df/">Experience SoundConsensus</a>.</p>
 
-<p><strong>The Data</strong>: Each column is associated with a music publication. Each cell containing a bar corresponds to a review score. The vertical position of a cell encodes its rank among other reviews from that publication. The bars in each cell encode the score itself.</p>
+<p><strong>Visual Encoding</strong>: Each column is associated with a music publication. Each cell containing a bar corresponds to a review score. The vertical position of a cell encodes its rank among other reviews from that publication. The bars in each cell encode the score itself.</p>
 
-<p><strong>Visual Encoding</strong>: The first column is unique in that it encodes the overall rank and score calculated by <a href="http://www.albumoftheyear.org/ratings/overall/2014/15">albumoftheyear.org</a>. </p>
+<p> The first column is unique in that it encodes the overall rank and score calculated by <a href="http://www.albumoftheyear.org/ratings/overall/2014/15">albumoftheyear.org</a>. </p>
 
 <p>The columns are of unequal size because: (1) not all of the music publications reviewed all of the records; and (2) some music publications use a 10-point scale when rating a record, resulting in more ties than those using a 100-point or decimal scale. </p>
 
