--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
 
 <p><img src="https://raw.githubusercontent.com/mattbrehmer/SoundConsensus/master/screenshots/14.12.28-about-panel.png" alt="SoundConsensus" title="SoundConsensus"></p>
 
-<p><strong>SoundConsensus</strong> is an interactive visualization by <a href="https://twitter.com/mattbrehmer">@mattbrehmer</a> for comparing multiple ranked lists of record reviews from 19 prominent music publications. The data visualized here represents the 105 most-reviewed records released in 2014, according to the music publication aggregator site <a href="http://www.albumoftheyear.org/ratings/overall/2014/15">albumoftheyear.org</a>.</p>
+<p><strong>SoundConsensus</strong> is an interactive visualization by <a href="https://twitter.com/mattbrehmer">@mattbrehmer</a> for comparing multiple ranked lists of record reviews from prominent music publications. The data visualized here represents the most-reviewed records released in a calendar year, according to the music publication aggregator site <a href="http://www.albumoftheyear.org/ratings/overall/2015">albumoftheyear.org</a>.</p>
 
-<p><a href="http://mattbrehmer.github.io/SoundConsensus/app/">Try SoundConsensus Here</a>.</p>
+<p><a href="http://mattbrehmer.github.io/SoundConsensus/2015/">SoundConsensus 2015</a>.</p>
+<p><a href="http://mattbrehmer.github.io/SoundConsensus/2014/">SoundConsensus 2014</a>.</p>
 
 <p><strong>Visual Encoding</strong>: Each column is associated with a music publication. Each cell containing a bar corresponds to a review score. The vertical position of a cell encodes its rank among other reviews from that publication. The bars in each cell encode the score itself.</p>
 
-<p> The first column is unique in that it encodes the overall rank and score calculated by <a href="http://www.albumoftheyear.org/ratings/overall/2014/15">albumoftheyear.org</a>. </p>
+<p> The first column is unique in that it encodes the overall rank and score calculated by <a href="http://www.albumoftheyear.org/ratings/overall/2015">albumoftheyear.org</a>. </p>
 
 <p>The columns are of unequal size because: (1) not all of the music publications reviewed all of the records; and (2) some music publications use a 10-point scale when rating a record, resulting in more ties than those using a 100-point or decimal scale. </p>
 
@@ -61,6 +62,6 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
