--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 		<script>window["_GOOG_TRANS_EXT_VER"] = "1";</script>
 	</head>
 	<body>
-	</body>
-	<script src="js/d3.min.js"></script>
-	<script type="text/javascript" src="js/soundConsensus.js"></script>
+		<script src="js/d3.min.js"></script>
+		<script type="text/javascript" src="js/soundConsensus.js"></script>
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-71336877-1', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
+	</body>	
 </html>
