--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <p><img src="https://raw.githubusercontent.com/mattbrehmer/SoundConsensus/master/screenshots/14.12.28-consensus-filtering.png" alt="Consensus Filtering" title="SoundConsensus"></p>
 
-<p><strong>Consensus Filtering</strong>: Select a consensus level from the dropdown box in the lower left to filter based on a record's standard deviation of review scores, where a high standard deviation corresponds to a low consensus, and vice versa (consensus ranges are at 20% quantiles).</p>
+<p><strong>Consensus Filtering</strong>: Select a consensus level from the dropdown box in the lower left to filter based on a record's standard deviation of review scores, where a high standard deviation corresponds to a low consensus, and vice versa.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/mattbrehmer">mattbrehmer</a></p>
