new images on GH page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
 
-<p><img src="https://raw.githubusercontent.com/mattbrehmer/SoundConsensus/master/screenshots/14.12.28-about-panel.png" alt="SoundConsensus" title="SoundConsensus"></p>
+<p><img src="2015/SC2015.png" alt="SoundConsensus" title="SoundConsensus"></p>
 
 <p><strong>SoundConsensus</strong> is an interactive visualization by <a href="https://twitter.com/mattbrehmer">@mattbrehmer</a> for comparing multiple ranked lists of record reviews from prominent music publications. The data visualized here represents the most-reviewed records released in a calendar year, according to the music publication aggregator site <a href="http://www.albumoftheyear.org/ratings/overall/2015">albumoftheyear.org</a>.</p>
 
@@ -52,7 +52,7 @@
 
 <p><strong>Genre &amp; Record Label Filtering</strong>: Select a musical genre and / or record label from the dropdown boxes in the lower left to filter the list of records (filtering maintains the relative rank positions of review scores). </p>
 
-<p><img src="https://raw.githubusercontent.com/mattbrehmer/SoundConsensus/master/screenshots/14.12.28-consensus-filtering.png" alt="Consensus Filtering" title="SoundConsensus"></p>
+<p><img src="2015/SC2015b" alt="Consensus Filtering" title="SoundConsensus"></p>
 
 <p><strong>Consensus Filtering</strong>: Select a consensus level from the dropdown box in the lower left to filter based on a record's standard deviation of review scores, where a high standard deviation corresponds to a low consensus, and vice versa.</p>
       </section>
