--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <p><strong>Genre &amp; Record Label Filtering</strong>: Select a musical genre and / or record label from the dropdown boxes in the lower left to filter the list of records (filtering maintains the relative rank positions of review scores). </p>
 
-<p><img src="2015/SC2015b" alt="Consensus Filtering" title="SoundConsensus"></p>
+<p><img src="2015/SC2015b.png" alt="Consensus Filtering" title="SoundConsensus"></p>
 
 <p><strong>Consensus Filtering</strong>: Select a consensus level from the dropdown box in the lower left to filter based on a record's standard deviation of review scores, where a high standard deviation corresponds to a low consensus, and vice versa.</p>
       </section>
